[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/bala.gd" type="Script" id=1]
[ext_resource path="res://Sprites/coala1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/coala2.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.8889, 22.1217 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="bala" type="Area2D" groups=[
"koala",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 9.53674e-007, 2.86102e-006 )
scale = Vector2( 2.84803, 2.7967 )
[connection signal="area_entered" from="." to="." method="_on_bala_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_bala_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
